# template_cpp

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  README.md
include/: testclass.hpp
scripts/: build.sh  clean_full.sh  generate_docs.sh  install.sh
src/: main.cpp  testclass.cpp
testfiles/unit_tests/src/: test_catch2.cpp
